--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: ‘Mulish’, sans-serif;
+    font-family: 'Mulish', sans-serif;
     margin: 10px 0;
 }
 h1 {
