--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -37,14 +37,15 @@ div {
     /* border: 1px #333 solid; */
 }
 section {
-    background-color: #F1FAFF;
     padding: 80px 40px;
 }
 header {
     justify-content: space-around;
     align-items: center;
     padding: 10px;
-    height: 60px; 
+    height: 60px;
+    background-color: #6DCAFF;
+
 }
 footer {
     justify-content: space-evenly;
@@ -59,8 +60,9 @@ video {
 /* LINKS */
 a:link, a:visited {
     text-decoration: none;
-    color:lightseagreen;
+    color: #000;
     padding: 10px;
+    font-weight: 400;
 }
 a:hover {
     color:midnightblue;
@@ -70,30 +72,27 @@ a:active {
 }
 /* CTA Button */
 a.cta-button:link, a.cta-button:visited {
-    background-color: orangered;
+    background-color:#98DAFF;
     border-radius: 8px;
-    color:whitesmoke;
+    color:#000;
     padding: 16px 24px;
 }
 a.cta-button:hover {
-    background-color: tomato;
+    background-color: #3FAAE5;
+    color: #fff;
 }
-a.cta-button:active {
-    background-color:darkred;
-}
+
 /* CV Download Button */
-a.cv-button:link, a.cv-button:visited {
-    background-color: orangered;
+a.cv-button:link {
+    background-color: #98DAFF;
     border-radius: 8px;
     color:whitesmoke;
     padding: 8px 16px;
 }
 a.cv-button:hover {
-    background-color: tomato;
+    background-color: #3FAAE5;
 }
-a.cv-button:active {
-    background-color:darkred;
-}
+
 .card {
     width: 250px;
 }
@@ -120,7 +119,6 @@ a.cv-button:active {
 }
 .container {
     display: flex;
-    background-color: #FFDCDC;
 }
 .author-card {
     align-items: center;
@@ -211,3 +209,14 @@ input[type=submit] {
 textarea {
     width: 80%;
 }
+
+/* card */
+
+
+/* Auto Layout */
+
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: flex-start;
+padding: 0px;
