--- a/glint-master/css/main.css
+++ b/glint-master/css/main.css
@@ -1803,8 +1803,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content h1 {
-    font-family: "montserrat-medium", sans-serif;
-    font-size: 6.3rem;
+    font-family: "Nalisa-Regular", sans-serif;
+    font-size: 10.3rem;
     line-height: 1.333;
     margin-top: 0;
     color: #FFFFFF;
