--- a/glint-master/css/main.css
+++ b/glint-master/css/main.css
@@ -1894,9 +1894,9 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 .home-content__line {
     display: block;
-    width: 2px;
-    height: 10.2rem;
-    background-color: #39b54a;
+    width: 1px;
+    height: 40.2rem;
+    background-color: #ffffff;
     position: absolute;
     right: 7.2rem;
     bottom: 0;
