--- a/glint-master/css/main.css
+++ b/glint-master/css/main.css
@@ -1225,8 +1225,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .display-2 {
-    font-family: "montserrat-medium", sans-serif;
-    font-size: 5.2rem;
+    font-family: "rollgates-regular", sans-serif;
+    font-size: 7.8rem;
     line-height: 1.255;
     color: #000000;
     margin-top: 0;
@@ -2504,7 +2504,7 @@ html.no-csstransitions .home-content__main {
  *
  * ------------------------------------------------------------------- */
 .s-works {
-    background: #FFFFFF;
+    background: #FFF5D4;
     padding: 0 0 15rem 0;
     min-height: 800px;
     position: relative;
