--- a/glint-master/css/main.css
+++ b/glint-master/css/main.css
@@ -527,7 +527,7 @@ form,
     left: 0;
     right: 0;
     bottom: 0;
-    background: #050505;
+    background: #0D0D0D;
     z-index: 800;
     height: 100%;
     width: 100%;
@@ -545,7 +545,7 @@ form,
 }
 
 .line-scale-pulse-out > div {
-    background-color: #39b54a;
+    background-color: #FFF5D4;
     width: 4px;
     height: 35px;
     border-radius: 2px;
@@ -1475,6 +1475,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     background: #FFF5D4;
     color: rgba(255, 255, 255, 0.25);
     font-family: "montserrat-light", sans-serif;
+    text-transform: uppercase;
     font-size: 1.3rem;
     line-height: 1.846;
     padding: 3.6rem 3rem 3.6rem 3.6rem;
