--- a/glint-master/css/main.css
+++ b/glint-master/css/main.css
@@ -2174,7 +2174,7 @@ html.no-csstransitions .home-content__main {
         font-size: 3.5rem;
     }
     .home-content__main {
-        text-align: center;
+        text-align: left;
         max-width: none;
         padding-top: 15rem;
         padding-right: 25px;
